service-mesh/gateway-toolkit.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: toolkit-gateway
  namespace: robotorium-idm
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
